# nwt4

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  linnwt4.desktop.in
include/: configfile.h  firmwidget.h  fmarkedlg.h  konstdef.h  mainwindow.h  nwt7linux.h  optiondlg.h  profildlg.h  sondedlg.h  widgetwobbeln.h  wkmanager.h
include/platform/linux/: lin_modem.h
include/platform/windows/: win_modem.h
resources/: images.qrc
src/: configfile.cpp  firmwidget.cpp  fmarkedlg.cpp  main.cpp  mainwindow.cpp  nwt7linux.cpp  optiondlg.cpp  profildlg.cpp  sondedlg.cpp  widgetwobbeln.cpp  wkmanager.cpp
src/platform/linux/: lin_modem.cpp
src/platform/windows/: win_modem.cpp
translations/: app_en.ts  app_hu.ts  app_nl.ts  app_pl.ts  app_ru.ts
